<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red"
    android:padding="@dimen/paddingRelative"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <TextView
            style="@style/Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/heart_vs_brain" />

        <ImageView
            style="@style/BothImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/brain_vs_heart"  />

        <TextView
            style="@style/Question"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Question" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/Team"
                    android:id="@+id/brain_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/brain"
                    android:drawablePadding="@dimen/margin_12"
                    android:text="@string/zero"
                    />

                <Button
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/confidence"
                    android:onClick="AddThreePointForBrain"
                    android:text="@string/Confidence" />

                <Button
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/confused"
                    android:onClick="AddTwoPointForBrain"
                    android:text="@string/Confused" />

                <Button
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/curious"
                    android:onClick="AddOnePointForBrain"
                    android:text="@string/curious" />
            </LinearLayout>

            <View
                android:layout_width="@dimen/one"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:background="@color/red" />

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/Team"
                    android:id="@+id/heart_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/heart"
                    android:text="@string/zero"
                    android:drawablePadding="@dimen/margin_12"/>

                <Button
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/love"
                    android:onClick="AddThreePointForHeart"
                    android:text="@string/love" />

                <Button
                    style="@style/Button"
                    android:id="@+id/desire"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/desire"
                    android:onClick="AddTwoPointForHeart"
                    android:text="@string/desire" />

                <Button
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/depressed"
                    android:onClick="AddOnePointForHeart"
                    android:text="@string/depressed" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <Button
        style="@style/Reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="reset"
        android:text="@string/reset" />

</RelativeLayout>

